--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     crossorigin="anonymous"></script>
     <script src= "./javascripts/helpers/maths.js" type="module"></script>
     <script src = "./javascripts/helpers/util.js" type="module"></script>
+    <script src="./javascripts//components/calculator.js" type = "module"></script>
     <script src="./javascripts/main.js" type="module"></script>
 </body>
 </html>
