--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div id= "result"></div>
-
+    <div class = "calculator col-4 offset-md-4">
+        <div class="row">
+            <div id="result"></div>
+        </div>
+        <div class="row">
+            <button type="button" class=" ntn btn-secondary" id="sevenButton">7</button>
+        </div>
+    </div>
+    
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -17,6 +25,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
     <script src= "./javascripts/helpers/maths.js" type="module"></script>
+    <script src="./javascripts/helpers/buttonEvents.js" type="module"></script>
     <script src = "./javascripts/helpers/util.js" type="module"></script>
     <script src="./javascripts//components/calculator.js" type = "module"></script>
     <script src="./javascripts/main.js" type="module"></script>
